# pytorch-extension

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.go
char-rnn/char-rnn/: CMakeLists.txt  RnnTrainer.cpp  RnnTrainer.h
register_module/: dcgan.cpp  display_samples.py
register_module/scripts/: build_executable.sh  dcgan_gen_makefile.sh
scripts/: gen_makefile.sh
test_pytorch_use/: CMakeLists.txt
